--- a/index.html
+++ b/index.html
@@ -1,136 +1,179 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Para Mi Niña 💖</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Para Mi Niña 💖</title>
 
-    <style>
-        body {
-            margin: 0;
-            overflow: hidden;
-            font-family: Arial, sans-serif;
-            background: black;
-            color: white;
-            text-align: center;
-        }
+<style>
+body {
+    margin: 0;
+    overflow: hidden;
+    font-family: Arial, sans-serif;
+    background: black;
+    color: white;
+    text-align: center;
+}
 
-        #galaxy {
-            position: fixed;
-            width: 100%;
-            height: 100%;
-            background: radial-gradient(circle at center, #050510 0%, #000000 70%);
-            overflow: hidden;
-            display: none; /* Oculto al principio */
-        }
+/* GALAXIA */
+#galaxy {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: radial-gradient(circle at center, #050510 0%, #000000 70%);
+    overflow: hidden;
+    display: none;
+}
 
-        .star {
-            position: absolute;
-            width: 2px;
-            height: 2px;
-            background: white;
-            border-radius: 50%;
-            animation: blink 2s infinite alternate;
-        }
+/* ESTRELLAS */
+.star {
+    position: absolute;
+    width: 2px;
+    height: 2px;
+    background: white;
+    border-radius: 50%;
+    animation: blink 2s infinite alternate;
+}
 
-        @keyframes blink {
-            from { opacity: 0.2; }
-            to { opacity: 1; }
-        }
+@keyframes blink {
+    from { opacity: 0.2; }
+    to { opacity: 1; }
+}
 
-        .content {
-            position: relative;
-            z-index: 10;
-            top: 30%;
-        }
+/* FRASES */
+.phrase {
+    position: absolute;
+    color: #ffb6e6;
+    font-size: 16px;
+    white-space: nowrap;
+    animation: float 20s linear infinite;
+}
 
-        .message {
-            position: relative;
-            z-index: 10;
-            top: 30%;
-            opacity: 1;
-            transition: opacity 1s;
-        }
+@keyframes float {
+    from {
+        transform: translateY(0px);
+        opacity: 0;
+    }
+    10% { opacity: 1; }
+    90% { opacity: 1; }
+    to {
+        transform: translateY(-800px);
+        opacity: 0;
+    }
+}
 
-        .phrase {
-            position: absolute;
-            color: white;
-            font-size: 18px;
-            white-space: nowrap;
-            animation: rotate 10s infinite linear;
-        }
+/* MENSAJE INICIAL */
+.message {
+    position: relative;
+    z-index: 10;
+    top: 30%;
+    transition: opacity 1s ease;
+}
 
-        @keyframes rotate {
-            from { transform: translate(0, 0) rotate(0deg); }
-            to { transform: translate(100px, 100px) rotate(360deg); }
-        }
+button {
+    padding: 14px 28px;
+    font-size: 18px;
+    border: none;
+    border-radius: 15px;
+    background: #ff4fa3;
+    color: white;
+    cursor: pointer;
+    margin-top: 20px;
+}
 
-        button {
-            padding: 12px 25px;
-            font-size: 18px;
-            border: none;
-            border-radius: 12px;
-            background: #ff4fa3;
-            color: white;
-            cursor: pointer;
-        }
-
-        button:hover {
-            background: #ff77bb;
-        }
-    </style>
+button:hover {
+    background: #ff77bb;
+}
+</style>
 </head>
 
 <body>
 
-    <div class="message" id="message">
-        <h1>Para Ti Mi Niña 💕</h1>
-        <p>Aunque la distancia nos separe, mi corazón siempre está contigo.</p>
-        <p>— A y D</p>
-        <button onclick="revealGalaxy()">Descubre nuestro amor en las estrellas</button>
-    </div>
+<!-- MENSAJE -->
+<div class="message" id="message">
+    <h1>Para Ti, Mi Niña 💕</h1>
+    <p>Aunque la distancia nos separe, mi corazón vive contigo cada día.</p>
+    <p><strong>A y D</strong></p>
+    <button onclick="revealGalaxy()">Descubre nuestro amor en las estrellas ✨</button>
+</div>
 
-    <div id="galaxy"></div>
+<!-- GALAXIA -->
+<div id="galaxy"></div>
 
-    <audio id="music" loop>
-        <source src="AhaTok_Angel_664c63de-7999-4b59-b96f-c50831505653.mp3" type="audio/mpeg">
-    </audio>
+<audio id="music" loop>
+    <source src="AhaTok_Angel_664c63de-7999-4b59-b96f-c50831505653.mp3" type="audio/mpeg">
+</audio>
 
-    <script>
-        const galaxy = document.getElementById("galaxy");
-        const message = document.getElementById("message");
+<script>
+const galaxy = document.getElementById("galaxy");
+const message = document.getElementById("message");
+const music = document.getElementById("music");
 
-        // Array de frases románticas
-        const frases = [
-            "Mi amor, eres mi guía en la noche.",
-            "Cada estrella es un beso que te envío.",
-            "Contigo, hasta la distancia se vuelve magia.",
-            "Eres mi sol en las noches más oscuras.",
-            "Tu amor es mi universo infinito.",
-            "A cada paso, te siento más cerca.",
-            "En cada latido, eres mi destino.",
-            "Amor a distancia, pero más fuerte que nunca.",
-            "Tú y yo, un solo corazón en dos mundos.",
-            "Bajo estas estrellas, te prometo amor eterno.",
-            // Añade más frases según quieras
-        ];
+/* FRASES ROMÁNTICAS */
+const frases = [
+"Mi amor eterno 💖",
+"Eres mi universo 🌌",
+"Mi niña hermosa",
+"Contigo todo es magia ✨",
+"Siempre tú y yo",
+"Mi corazón es tuyo",
+"La distancia no nos vence",
+"Eres mi estrella favorita ⭐",
+"Te amo infinitamente",
+"Mi vida eres tú",
+"Mi razón de sonreír",
+"Mi amor bonito",
+"Mi princesa hermosa",
+"Mi alma te pertenece",
+"Siempre juntos",
+"Mi cielo precioso",
+"Mi corazón late por ti",
+"Eres mi destino",
+"Nuestro amor no tiene límites",
+"Siempre serás mi hogar",
+"Te amo más cada día",
+"Mi dulce niña",
+"Mi universo entero eres tú",
+"Amor sin fronteras",
+"Eres mi sueño hecho realidad"
+];
 
-        // Generar las estrellas
-        for(let i=0; i<250; i++){
-            let star = document.createElement("div");
-            star.className = "star";
-            star.style.top = Math.random()*100 + "%";
-            star.style.left = Math.random()*100 + "%";
-            star.style.animationDuration = (Math.random()*3+1)+"s";
-            galaxy.appendChild(star);
+/* CREAR ESTRELLAS */
+for(let i=0; i<300; i++){
+    let star = document.createElement("div");
+    star.className = "star";
+    star.style.top = Math.random()*100 + "%";
+    star.style.left = Math.random()*100 + "%";
+    star.style.animationDuration = (Math.random()*3+1)+"s";
+    galaxy.appendChild(star);
+}
+
+/* FUNCIÓN PRINCIPAL */
+function revealGalaxy(){
+
+    message.style.opacity = "0";
+
+    setTimeout(() => {
+        message.style.display = "none";
+        galaxy.style.display = "block";
+        music.play();
+
+        /* GENERAR MUCHAS FRASES */
+        for(let i=0; i<120; i++){
+            let phrase = document.createElement("div");
+            phrase.className = "phrase";
+            phrase.innerText = frases[Math.floor(Math.random()*frases.length)];
+
+            phrase.style.left = Math.random()*100 + "%";
+            phrase.style.top = (Math.random()*100 + 100) + "%";
+            phrase.style.animationDuration = (15 + Math.random()*15) + "s";
+
+            galaxy.appendChild(phrase);
         }
 
-        function revealGalaxy() {
-            // Ocultamos el mensaje
-            message.style.opacity = 0;
-            setTimeout(() => {
-                message.style.display = 'none';
-                galaxy.style.display = 'block';
-                document.getElementById("music").play();
-                // Generamos las frases en la galaxia
-                for(let i = 0; i
+    }, 1000);
+}
+</script>
+
+</body>
+    </html>
